Fix alignemnt on large and small views

--- a/src/app/config/no-config/no-config.component.scss
+++ b/src/app/config/no-config/no-config.component.scss
@@ -46,7 +46,7 @@
       }
 
       &-adjust {
-        display: inline-table;
+        display: inline-flex;
         padding: 3vh 3vw;
         border: 2px solid #dcdde1;
         border-radius: 2.5vw 0 0 2.5vw;
